# SubForge

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
specs/: 0001-spec.md  0002-implementation-plan.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/app/: config_commands.rs  hardware_commands.rs  mod.rs  state.rs  task_commands.rs  task_runner.rs
src-tauri/src/domain/: config.rs  task.rs
src-tauri/src/infra/: config_store.rs  ffmpeg_tool.rs  google_translate.rs  hardware.rs  layout.rs  llm_translate.rs  mod.rs  openai_compat.rs  paths.rs  runner_limits.rs  secrets.rs  srt.rs  subtitle_output.rs  subtitle_segmentation.rs  system_proxy.rs  task_store.rs  transcribe_deps.rs  whisper_models.rs  whisper_runtime.rs  whisper_tool.rs
src/pages/: MainPage.tsx  SettingsPage.tsx
src/services/: ipc.ts  tasksIpc.ts
src/types/: config.ts  hardware.ts  tasks.ts
